--- a/Client/src/Pages/AllUserBoardsPage.module.css
+++ b/Client/src/Pages/AllUserBoardsPage.module.css
@@ -1,5 +1,4 @@
-﻿/* AllUserBoardsPage.module.css */
-.container {
+﻿.container {
     text-align: center;
     margin: 20px auto;
     max-width: 1000px;
