--- a/Client/src/Pages/ChangePasswordPage.module.css
+++ b/Client/src/Pages/ChangePasswordPage.module.css
@@ -63,7 +63,7 @@ button:disabled {
 
 .passwordInput input {
     width: 100%;
-    padding-right: 50px; /* Leave space for the button */
+    padding-right: 50px;
 }
 
 .toggleButton {
