--- a/Client/src/App.module.css
+++ b/Client/src/App.module.css
@@ -62,7 +62,7 @@
   position: sticky;
   top: 0;
   z-index: 10;
-  background-color: #333; /* Adjust as needed */
+  background-color: #333;
   color: white;
 }
 
